--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,14 @@ set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -g -pedantic")
 foreach( sourcefile ${SOURCES} )
         get_filename_component( demo_name ${sourcefile} NAME_WE )
 		if (${demo_name} STREQUAL "pstring")
-			add_library(pstring ${sourcefile})
+			add_library(pstring ${sourcefile} include/CountingSort.h)
             continue()
 		endif()
 		if (${demo_name} STREQUAL "pUnitTest")
 			add_library(pUnitTest ${sourcefile})
             continue()
 		endif()
-        add_executable( ${demo_name} ${sourcefile} )
+        add_executable( ${demo_name} ${sourcefile} sort_search_problems/CountingSortDemo.cpp)
 		if (${demo_name} STREQUAL "pstring_test")
 			target_link_libraries (${demo_name} pstring pUnitTest)
 		endif()
